header and banner done

--- a/index.html
+++ b/index.html
@@ -25,7 +25,20 @@
     </header>
 
     <section class="banner">
+      <div class="avatar">
+        <!-- Image -->
+      </div>
 
+      <div class="tile">
+        <h1>Carnun Marcus-Page</h1>
+        <div class="bio short">
+          <p>Web Dev @Lambda School</p>
+          <p>Philosophy '19 @Dartmouth College</p>
+        </div>
+        <button>
+          <h2>Contact</h2>
+        </button>
+      </div>
     </section>
 
     <section class="info">
