html done (for now)

--- a/index.html
+++ b/index.html
@@ -42,11 +42,44 @@
     </section>
 
     <section class="info">
+      <div class="bio long">
+        <p>Blah blah blah...</p>
+        <p>And another thing!</p>
+        <p>Waffle waffle waffle do you like waffles I'm more partial to doughnuts myself waffles are too stodgy or maybe not stodgy enough it's one of the two I'm not sure I can't quite remember much these days turn into nights and just get away from you you you you you know what I mean when I say that it's really important that you commit often cos if you don't...</p>
+      </div>
 
+      <div class="box">
+        <div class="skills">
+          <h2>Skills</h2>
+          <ol>
+            <li>A</li>
+            <li>B</li>
+            <li>C</li>
+          </ol>
+        </div>
+        <div class="interests">
+            <h2>Interests</h2>
+            <ol>
+              <li>Epistemology</li>
+              <li>Physical/abstract reality</li>
+              <li>Minds</li>
+            </ol>
+          </div>
+      </div>
+
+      <div class="workHistory">
+        <h2>Work History</h2>
+        <ul>
+          <li>X</li>
+          <li>Y</li>
+          <li>Z</li>
+        </ul>
+      </div>
     </section>
 
     <footer>
-
+      <button>Twitter</button>
+      <button>Github</button>
     </footer>
   </div>
 </body>
