--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <section class="banner">
       <div class="avatar">
-        <!-- Image -->
+        <img src="./images/avatar.png" alt="Avatar Image">
       </div>
 
       <div class="tile">
