banner done (for now)

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
       <div class="tile">
         <h1>Carnun Marcus-Page</h1>
         <div class="bio short">
-          <p>Web Dev @Lambda School</p>
-          <p>Philosophy '19 @Dartmouth College</p>
+          <h3>Web Dev @Lambda School</h3>
+          <h3>Philosophy '19 @Dartmouth College</h3>
         </div>
         <button>
           <h2>Contact</h2>
