info basic arrangement done

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
 
@@ -20,7 +21,7 @@
         <a href="#">Home</a>
         <a href="#">About</a>
         <a href="#">Portfolio</a>
-        <a href="#">Contact</a>        
+        <a href="#">Contact</a>
       </nav>
     </header>
 
@@ -42,22 +43,26 @@
     </section>
 
     <section class="info">
-      <div class="bio long">
-        <p>Blah blah blah...</p>
-        <p>And another thing!</p>
-        <p>Waffle waffle waffle do you like waffles I'm more partial to doughnuts myself waffles are too stodgy or maybe not stodgy enough it's one of the two I'm not sure I can't quite remember much these days turn into nights and just get away from you you you you you know what I mean when I say that it's really important that you commit often cos if you don't...</p>
-      </div>
-
-      <div class="box">
-        <div class="skills">
-          <h2>Skills</h2>
-          <ol>
-            <li>A</li>
-            <li>B</li>
-            <li>C</li>
-          </ol>
+      <div class="box top">
+        <div class="bio long">
+          <p>Blah blah blah...</p>
+          <p>And another thing!</p>
+          <p>Waffle waffle waffle do you like waffles I'm more partial to doughnuts myself waffles are too stodgy or
+            maybe not stodgy enough it's one of the two I'm not sure I can't quite remember much these days turn into
+            nights and just get away from you you you you you know what I mean when I say that it's really important
+            that you commit often cos if you don't...</p>
         </div>
-        <div class="interests">
+
+        <div class="box top right">
+          <div class="skills">
+            <h2>Skills</h2>
+            <ol>
+              <li>A</li>
+              <li>B</li>
+              <li>C</li>
+            </ol>
+          </div>
+          <div class="interests">
             <h2>Interests</h2>
             <ol>
               <li>Epistemology</li>
@@ -65,6 +70,7 @@
               <li>Minds</li>
             </ol>
           </div>
+        </div>
       </div>
 
       <div class="workHistory">
@@ -83,4 +89,5 @@
     </footer>
   </div>
 </body>
+
 </html>
