--- a/index.html
+++ b/index.html
@@ -44,9 +44,11 @@
 
     <section class="info">
       <div class="box top">
-        <div class="bio long">
+        <div class="box top left">
           <p>Blah blah blah...</p>
+          <br/>
           <p>And another thing!</p>
+          <br/>
           <p>Waffle waffle waffle do you like waffles I'm more partial to doughnuts myself waffles are too stodgy or
             maybe not stodgy enough it's one of the two I'm not sure I can't quite remember much these days turn into
             nights and just get away from you you you you you know what I mean when I say that it's really important
@@ -56,7 +58,7 @@
         <div class="box top right">
           <div class="skills">
             <h2>Skills</h2>
-            <ol>
+            <ol type="1">
               <li>A</li>
               <li>B</li>
               <li>C</li>
@@ -64,7 +66,7 @@
           </div>
           <div class="interests">
             <h2>Interests</h2>
-            <ol>
+            <ol type="1">
               <li>Epistemology</li>
               <li>Physical/abstract reality</li>
               <li>Minds</li>
@@ -73,7 +75,7 @@
         </div>
       </div>
 
-      <div class="workHistory">
+      <div class="box bottom">
         <h2>Work History</h2>
         <ul>
           <li>X</li>
