pretty much done

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
               <li>C</li>
             </ol>
           </div>
+          <hr>
           <div class="interests">
             <h2>Interests</h2>
             <ol type="1">
@@ -86,8 +87,8 @@
     </section>
 
     <footer>
-      <button>Twitter</button>
-      <button>Github</button>
+      <button href="#">Twitter</button>
+      <button href="#">Github</button>
     </footer>
   </div>
 </body>
